fixing contact me bugs

--- a/components.html
+++ b/components.html
@@ -252,7 +252,7 @@
       <!-- navbars -->
       <h3 class="components-section-title font-weight-normal mt-5">Navigations</h3>
       <hr>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-primary rounded shadow mb-3">
+      < class="navbar navbar-expand-sm navbar-dark bg-primary rounded shadow mb-3">
          <div class="container">
             <a class="navbar-brand" href="#">Primary Color</a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
