--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section class="section" id="contact">
         <div class="container text-center">
             <p class="section-subtitle">communication is the key</p>
-            <h6 class="section-title mb-5">choose a way to connect me</h6>
+            <h6 class="section-title mb-5">choose a way to connect with me</h6>
              <a href="https://github.com/MEven44" class="link"><i class="ti-github"></i></a>
                 <a href="https://www.linkedin.com/in/moran-even/" class="link"><i class="ti-linkedin"></i></a>
                 <a href="https://angel.co/u/moran-even-1" class="link"><i class="ti-bell"></i></a>
