--- a/index.html
+++ b/index.html
@@ -96,17 +96,20 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
+                        <a href='https://on-the-stage.herokuapp.com/' target="_blank" rel="noopener noreferrer">
                         <div class="body">
                             <img src="assets/imgs/music.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
-                            <h6 class="title">SoundCloud clone</h6>
+                            <h6 class="title" >SoundCloud clone</h6>
                             <p class="subtitle">A SoundCloud clone, work in progress, using node.js, React ,redux express.js and sequelize</p>
                         </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
+                         <a href='https://q-cord.onrender.com/' target="_blank" rel="noopener noreferrer">
                         <div class="body">
                             <img src="assets/imgs/chat.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
@@ -114,10 +117,12 @@
                             <h6 class="title">Discord Clone</h6>
                             <p class="subtitle"> Technologies: Java-script, React.js, Redux, flask, python, sqlAlchemy</p>
                         </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
+                         <a href='https://ipulser-clinicians.onrender.com/' target="_blank" rel="noopener noreferrer">
                         <div class="body">
                             <img src="assets/imgs/clinic.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
@@ -125,6 +130,7 @@
                             <h6 class="title">iPulser for clinicians</h6>
                             <p class="subtitle">A real life project for iPulser.com
                     </div>
+                    </a>
                 </div>
                 
             </div><!-- end of row -->
