--- a/index.html
+++ b/index.html
@@ -148,8 +148,13 @@
             <!-- row -->
             <div class="row align-items-center">
                 <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                    <h6 class="title text-light">Want to work with me?</h6>
-                    <!-- <p class="m-0 text-light">Lets Talk!</p> -->
+                    <h6 class="title text-light">my skills</h6>
+                    <p class="m-0 text-light"> <b>Technical skills : </b><br> JavaScript | React.js | Redux.js | Python | HTML5 | CSS3 | Git | Sequelize <br>
+                    <b>Life skills:</b> 
+                    <br> Leadership | Customer experience and success | Verbal and written communication | Learning and Development | Teaching and training |
+                    Working in a healthcare environment | Patient journey 
+                    
+</p>
                 </div>
                 <div class="col-sm offset-sm-2 offset-md-3">
                      <a class="link" href="#contact">
