--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <!-- row -->
             <div class="row align-items-center">
                 <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                    <h6 class="title text-light">my skills</h6>
+                    <h6 class="title text-light">My skills</h6>
                     <p class="m-0 text-light"> <b>Technical skills : </b><br> JavaScript | React.js | Redux.js | Python | HTML5 | CSS3 | Git | Sequelize <br>
                     <b>Life skills:</b> 
                     <br> Leadership | Customer experience and success | Verbal and written communication | Learning and Development | Teaching and training |
