some changes to header and project line

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Moran Even</span>
             </h1>
-            <p class="header-subtitle">Product manager <br> Full Stack Developer</p>
+            <p class="header-subtitle">Results-driven Full-stack Software Engineer <br> with a background in startup product management</p>
 
            
         </div>
@@ -73,7 +73,7 @@
                     <p>
                         Experienced healthcare provider turned Product Manager, skilled across health and technology.<br>
                         Brings a unique expertise to technical roles including 15 years of senior management experience,polished communication and training skills. <br> 
-                        <br>4 years’ experience across the full product lifecycle across ideation, go-to-market strategy and launch.
+                        <br>4 years experience across the full product lifecycle across ideation, go-to-market strategy and launch.
                         Combines distinctive knowledge in both product management and full-stack software development. <br>
                         <br>Synthesizes high level insights from users, formative and market view to drive product improvement.<br>
                        
